--- a/source/home-6-one-page.html
+++ b/source/home-6-one-page.html
@@ -203,14 +203,14 @@
                                 <div class="right text-left">
 
                                     <!-- Content -->
-                                    <h1 data-aos="zoom-in" data-aos-delay="2000" class="title effect-static-text"><span class="featured bottom"><span>Logistics</span></span><br>that goes further.</h1>
-                                    <p data-aos="zoom-in" data-aos-delay="2400" class="description bigger">For 20 years working with the most innovative in the field of transport.</p>
+                                    <h1 data-aos="zoom-in" data-aos-delay="2000" class="title effect-static-text"><span class="featured bottom"><span>Innovación</span></span><br>y calidad.</h1>
+                                    <p data-aos="zoom-in" data-aos-delay="2400" class="description bigger">Impulsando la excelencia en la industria farmacéutica.</p>
 
                                     <!-- Action -->
                                     <div data-aos="fade-up" data-aos-delay="2800" class="buttons">
                                         <div class="d-sm-inline-flex">
-                                            <a href="#contact" class="smooth-anchor mt-4 btn primary-button">GET IN TOUCH</a>
-                                            <a href="#services" class="smooth-anchor ml-sm-4 mt-4 btn outline-button">READ MORE</a>
+                                            <a href="#contact" class="smooth-anchor mt-4 btn primary-button">CONTÁCTANOS</a>
+                                            <a href="#services" class="smooth-anchor ml-sm-4 mt-4 btn outline-button">LEER MÁS</a>
                                         </div>
                                     </div>
                                 </div>
@@ -228,32 +228,32 @@
                 <div class="col-12 col-md-6 pr-md-5 align-self-center text-center text-md-left text">
                     <div data-aos="fade-up"  class="row intro">
                         <div class="col-12 p-0">
-                            <span class="pre-title m-auto m-md-0">About the network</span>
-                            <h2><span class="featured"><span>The</span></span> Company</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras iaculis diam varius diam ultricies lacinia. Mauris lacus tellus, ultrices eu volutpat sit amet, finibus a ipsum.</p>
-                            <p>Curabitur convallis, diam a egestas iaculis, neque lorem interdum felis, in viverra lacus tortor in leo.</p>
+                            <span class="pre-title m-auto m-md-0">Sobre Albanghu</span>
+                            <h2><span class="featured"><span>La</span></span> Empresa</h2>
+                            <p>Albanghu es una empresa panameña dedicada a la comercialización de materias primas para la industria farmacéutica en el mercado latinoamericano. </p>
+                            <p>Facilitamos el comercio entre fabricantes internacionales y laboratorios en América Latina, asegurando los más altos estándares de calidad y servicio.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 pr-md-5 align-self-center text-center text-md-left text">
                     <div class="row items">                             
                         <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 item">
-                            <h4><i class="mr-2 icon-badge"></i>Tradition</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                            <h4><i class="mr-2 icon-badge"></i>Tradición</h4>
+                            <p>Comprometidos con la calidad e innovación desde el inicio.</p>
                         </div>           
                         <div data-aos="fade-up" class="col-12 col-md-6 p-0 item">
-                            <h4><i class="mr-2 icon-lock"></i>Security</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                            <h4><i class="mr-2 icon-lock"></i>Seguridad</h4>
+                            <p>Productos seguros y eficaces de proveedores certificados.</p>
                         </div> 
                     </div>
                     <div class="row items"> 
                         <div data-aos="fade-up" class="col-12 col-md-6 p-0 item">
-                            <h4><i class="mr-2 icon-note"></i>Certificate</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                            <h4><i class="mr-2 icon-note"></i>Certifición</h4>
+                            <p>Productos documentados según las Buenas Prácticas de Manufactura.</p>
                         </div>  
                         <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 item">
-                            <h4><i class="mr-2 icon-graduation"></i>Expertise</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                            <h4><i class="mr-2 icon-graduation"></i>Experiencia</h4>
+                            <p>Soluciones personalizadas y apoyo constante a nuestros clientes.</p>
                         </div>
                     </div>
                 </div>
