--- a/source/home-6-one-page.html
+++ b/source/home-6-one-page.html
@@ -71,7 +71,7 @@
 
     <body class="home">
         
-        <!-- Preloader -->
+        <!-- Preloader 
         <div id="preloader" data-timeout="2000" class="odd preloader counter">
             <div data-aos="fade-up" data-aos-delay="500" class="row justify-content-center text-center items">
                 <div data-percent="100" class="radial">
@@ -79,6 +79,7 @@
                 </div>
             </div>
         </div>
+        -->
 
         <!-- Header -->
         <header id="header">
@@ -259,55 +260,52 @@
             <div class="container">
                 <div class="row intro">
                     <div class="col-12 col-md-9 align-self-center text-center text-md-left">
-                        <span class="pre-title m-auto ml-md-0">Our business areas</span>
-                        <h2>Excellence in <span class="featured"><span>Services</span></span></h2>
-                        <p>We are leaders in providing consultancy services with a set of cutting-edge technologies and a team of experienced and renowned professionals. These are some options that you can hire.</p>
-                    </div>
-                    <div class="col-12 col-md-3 align-self-end">
-                        <a href="#" class="btn mx-auto mr-md-0 ml-md-auto primary-button">SEE ALL</a>
+                        <span class="pre-title m-auto ml-md-0">Nuestras areas de servicio</span>
+                        <h2>Excelencia en<span class="featured"><span>Servicios</span></span></h2>
+                        <p>Somos líderes en la provisión de servicios de consultoría con tecnologías de vanguardia y un equipo de profesionales experimentados y reconocidos. Estas son algunas de las opciones que ofrecemos</p>
                     </div>
                 </div>
                 <div class="row justify-content-center items">
                     <div class="col-12 col-md-6 col-lg-4 item">
                         <div class="card">
                             <i class="icon icon-organization"></i>
-                            <h4>Audit & Assurance</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                            <h4>Venta de Materiales de Farmacia</h4>
+                            <p>Suministro mayorista de materias primas farmacéuticas de alta calidad.</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 item">
                         <div class="card">
                             <i class="icon icon-briefcase"></i>
-                            <h4>Financial Advisory</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                            <h4>Regulaciones y Cumplimiento</h4>
+                            <p>Garantizamos que todos los productos cumplan con las normativas vigentes.</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 item">
                         <div class="card">
                             <i class="icon icon-chart"></i>
-                            <h4>Analytics and M&A</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                            <h4>Consultoría en Calidad</h4>
+                            <p>Mejora y mantenimiento de estándares de calidad en procesos y productos.</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 item">
                         <div class="card">
                             <i class="icon icon-plane"></i>
-                            <h4>Middle Marketing</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                            <h4>Logística y Distribución</h4>
+                            <p>Gestión eficiente de la cadena de suministro desde el fabricante hasta el destino final.</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 item">
                         <div class="card">
                             <i class="icon icon-globe-alt"></i>
-                            <h4>Legal Consulting</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                            <h4>Innovación y Desarrollo</h4>
+                            <p>Apoyo en el desarrollo de nuevas formulaciones y productos innovadores.</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4 item">
                         <div class="card">
                             <i class="icon icon-drawer"></i>
-                            <h4>Regulatory Risk</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                            <h4>RSoporte Técnico</h4>
+                            <p>Asistencia técnica especializada para optimizar procesos y productos.</p>
                         </div>
                     </div>
                 </div>
