--- a/source/index.html
+++ b/source/index.html
@@ -316,36 +316,31 @@
             <div class="container full">
                 <div class="row text-center intro">
                     <div class="col-12">
-                        <span class="pre-title">How it works in practice</span>
-                        <h2><span class="featured"><span>Process</span></span> Management</h2>
-                        <p class="text-max-800">We work with innovative methodologies to ensure that the entire reformatting process is done from start to finish as planned.</p>
+                        <span class="pre-title">Nuestros</span>
+                        <h2><span class="featured"><span>Valores</span></span></h2>
+                        <p class="text-max-800">En Albanghu, nos guiamos por un conjunto de valores fundamentales que reflejan nuestro compromiso con la excelencia y la satisfacción de nuestros clientes. Estos valores son:</p>
                     </div>
                 </div>
                 <div class="row justify-content-center text-center items">
                     <div class="col-12 col-md-6 col-lg-2 item">
                         <div class="step"><span>01</span></div>
-                        <h4>Collection of information</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <h4>Profesionalidad </h4>
+                        <p>Nos enfocamos en cada detalle de nuestros servicios, garantizando la actualización constante del conocimiento de nuestro equipo y su formación profesional. </p>
                     </div>
                     <div class="col-12 col-md-6 col-lg-2 item">
                         <div class="step"><span>02</span></div>
-                        <h4>Strategic planning</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <h4>Eficiencia</h4>
+                        <p>Nuestra red de oficinas y equipo humano ofrece servicios rápidamente, con un control exhaustivo de plazos de ejecución y entrega, asegurando soluciones rápidas y efectivas.</p>
                     </div>
                     <div class="col-12 col-md-6 col-lg-2 item">
                         <div class="step"><span>03</span></div>
-                        <h4>Assignment of responsibilities</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <h4>Honestidad</h4>
+                        <p>Proveemos información objetiva y veraz a nuestros clientes, construyendo relaciones de confianza duradera. La transparencia y la integridad son esenciales en nuestras acciones.</p>
                     </div>
                     <div class="col-12 col-md-6 col-lg-2 item">
                         <div class="step"><span>04</span></div>
-                        <h4>Formatting process</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-2 item">
-                        <div class="step"><span>05</span></div>
-                        <h4>Continuity formalization</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <h4>Integridad</h4>
+                        <p>Tratamos decisiones, información y resultados con la máxima confidencialidad. Protegemos la información de nuestros clientes, garantizando un manejo confidencial y seguro.</p>
                     </div>
                 </div>
             </div>
