--- a/source/index.html
+++ b/source/index.html
@@ -303,7 +303,7 @@
                     <div class="col-12 col-md-6 col-lg-4 item">
                         <div class="card">
                             <i class="icon icon-drawer"></i>
-                            <h4>RSoporte Técnico</h4>
+                            <h4>Soporte Técnico</h4>
                             <p>Asistencia técnica especializada para optimizar procesos y productos.</p>
                         </div>
                     </div>
