--- a/source/index.html
+++ b/source/index.html
@@ -353,8 +353,8 @@
                     <div class="col-12 col-lg-8 align-self-top text-center text-md-left text">
                         <div class="row intro">
                             <div class="col-12 p-0">
-                                <span class="pre-title m-auto m-md-0">We like what we do</span>
-                                <h2><span class="featured"><span>Team</span></span> of Experts</h2>
+                                <span class="pre-title m-auto m-md-0">Nuestra</span>
+                                <h2><span class="featured"><span>Mision</span></span> & vision</h2>
                                 <p>Ethics and integrity are the bases on which our professionals build their careers.<br>They are fundamentals that become daily attitudes.</p>
                             </div>
                         </div>
@@ -365,39 +365,9 @@
                                         <img src="assets/images/team-1.jpg" alt="Person" class="person">
                                     </div>
                                     <div class="col-8 align-self-center text-left">
-                                        <h4>David Cooper</h4>
-                                        <p>CTO & CO-FOUNDER</p>
-                                        <ul class="navbar-nav social share-list ml-auto">
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-facebook-f"></i></a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-twitter"></i></a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-linkedin-in"></i></a>
-                                            </li>
-                                        </ul>
-                                    </div>  
-                                </div>
-                                <div class="row item">
-                                    <div class="col-4 p-0 pr-3 align-self-center">
-                                        <img src="assets/images/team-2.jpg" alt="Person" class="person">
-                                    </div>
-                                    <div class="col-8 align-self-center text-left">
-                                        <h4>Emma Lopez</h4>
-                                        <p>CHIEF MARKETING</p>
-                                        <ul class="navbar-nav social share-list ml-auto">
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-facebook-f"></i></a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-twitter"></i></a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-linkedin-in"></i></a>
-                                            </li>
-                                        </ul>
+                                        <h4>Mision</h4>
+                                        <p>Facilitar la comercialización de activos farmacéuticos para el comercio Latinoamericano.
+                                        </p>
                                     </div>  
                                 </div>
                             </div>                        
@@ -407,39 +377,8 @@
                                         <img src="assets/images/team-3.jpg" alt="Person" class="person">
                                     </div>
                                     <div class="col-8 align-self-center text-left">
-                                        <h4>Oliver Jones</h4>
-                                        <p>CHIEF PROCUREMENT</p>
-                                        <ul class="navbar-nav social share-list ml-auto">
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-facebook-f"></i></a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-twitter"></i></a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-linkedin-in"></i></a>
-                                            </li>
-                                        </ul>
-                                    </div>  
-                                </div>
-                                <div class="row item">
-                                    <div class="col-4 p-0 pr-3 align-self-center">
-                                        <img src="assets/images/team-4.jpg" alt="Person" class="person">
-                                    </div>
-                                    <div class="col-8 align-self-center text-left">
-                                        <h4>T. Johnson</h4>
-                                        <p>CEO & PRESIDENT</p>
-                                        <ul class="navbar-nav social share-list ml-auto">
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-facebook-f"></i></a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-twitter"></i></a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-linkedin-in"></i></a>
-                                            </li>
-                                        </ul>
+                                        <h4>Vision</h4>
+                                        <p>Posicionarnos en el mercado como comercializadora de ingredientes farmacéuticos activos de los mercados internacionales más estrictos, diferenciándonos por nuestros elevados estándares en servicio profesional y calidad certificada.</p>
                                     </div>  
                                 </div>
                             </div>
@@ -521,15 +460,15 @@
                             <p>A Functional HTML Template<br>for Corporate & Business.</p>
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a class="nav-link">
                                         <i class="fas fa-phone-alt mr-2"></i>
-                                        +1 (305) 1234-5678
+                                        +507 8388337
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="mailto:info@albanghu.com" class="nav-link">
                                         <i class="fas fa-envelope mr-2"></i>
-                                        hello@example.com
+                                        info@albanghu.com
                                     </a>
                                 </li>
                                 <li class="nav-item">
