--- a/source/index.html
+++ b/source/index.html
@@ -159,11 +159,11 @@
                             </a>
                         </li>
                     </ul>
-
+                    
                     <!-- Navbar Action -->
                     <ul class="navbar-nav action">
                         <li class="nav-item ml-3">
-                            <a href="#contact" class="smooth-anchor btn ml-lg-auto primary-button">CONTÁCTANOS</a>
+                            <a href="mailto:albanghu@gmail.com" class="smooth-anchor btn ml-lg-auto primary-button">CONTÁCTANOS</a>
                         </li>
                     </ul>
                 </div>
@@ -190,13 +190,12 @@
                                 <div class="right text-left">
 
                                     <!-- Content -->
-                                    <h1 data-aos="zoom-in" data-aos-delay="2000" class="title effect-static-text"><span class="featured bottom"><span>Innovación</span></span><br>y calidad.</h1>
+                                    <h1 data-aos="zoom-in" data-aos-delay="2000" class="title effect-static-text"><span class="featured bottom"><span>Confianza</span></span><br>y calidad.</h1>
                                     <p data-aos="zoom-in" data-aos-delay="2400" class="description bigger">Impulsando la excelencia en la industria farmacéutica.</p>
 
                                     <!-- Action -->
                                     <div data-aos="fade-up" data-aos-delay="2800" class="buttons">
                                         <div class="d-sm-inline-flex">
-                                            <a href="#contact" class="smooth-anchor mt-4 btn primary-button">CONTÁCTANOS</a>
                                             <a href="#services" class="smooth-anchor ml-sm-4 mt-4 btn outline-button">LEER MÁS</a>
                                         </div>
                                     </div>
@@ -225,21 +224,24 @@
                 <div class="col-12 col-md-6 pr-md-5 align-self-center text-center text-md-left text">
                     <div class="row items">                             
                         <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 item">
-                            <h4><i class="mr-2 icon-badge"></i>Experiencia</h4>
+                            <h4><i class="fa fa-users"> </i>
+                            </i>Experiencia</h4>
                             <p>Contamos con más de 15 años en la Industria Farmacéutica.</p>
                         </div>           
                         <div data-aos="fade-up" class="col-12 col-md-6 p-0 item">
-                            <h4><i class="mr-2 icon-lock"></i>Partners</h4>
+                            <h4><i class=" fa fa-check"></i> Partners</h4>
                             <p>Trabajamos con una amplia cartera de fabricantes certificadas a nivel mundial.</p>
                         </div> 
                     </div>
                     <div class="row items"> 
                         <div data-aos="fade-up" class="col-12 col-md-6 p-0 item">
-                            <h4><i class="mr-2 icon-note"></i>Certificación</h4>
+                            <h4><i class=" fas fa-award">
+                            </i> Certificación</h4>
                             <p>Productos documentados según las Buenas Prácticas de Manufactura.</p>
                         </div>  
                         <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 item">
-                            <h4><i class="mr-2 icon-graduation"></i>Financiamiento</h4>
+                            <h4><i class=" fa fa-dollar-sign">
+                            </i> Financiamiento</h4>
                             <p>Soluciones crediticias y personalizadas en apoyo constante a nuestros clientes.</p>
                         </div>
                     </div>
