delete mision y vision and add linkedin

--- a/source/index.html
+++ b/source/index.html
@@ -146,9 +146,6 @@
                         <li class="nav-item">
                             <a href="#process" class="smooth-anchor nav-link">VALORES</a>
                         </li>
-                        <li class="nav-item">
-                            <a href="#team" class="smooth-anchor nav-link">MISION Y VISION</a>
-                        </li>
                     </ul>
 
                     <!-- Navbar Toggle -->
@@ -159,7 +156,7 @@
                             </a>
                         </li>
                     </ul>
-                    
+
                     <!-- Navbar Action -->
                     <ul class="navbar-nav action">
                         <li class="nav-item ml-3">
@@ -342,52 +339,8 @@
                 </div>
             </div>
         </section>
-        <!-- Team -->
-        <section id="team" class="section-4 odd highlights team image-right">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-lg-8 align-self-top text-center text-md-left text">
-                        <div class="row intro">
-                            <div class="col-12 p-0">
-                                <span class="pre-title m-auto m-md-0">Nuestra</span>
-                                <h2><span class="featured"><span>Mision</span></span> & vision</h2>
-                                <p>estamos guiados por un propósito claro: facilitar el acceso a activos farmacéuticos de alta calidad en América Latina.</p>
-                            </div>
-                        </div>
-                        <div class="row items text-left">
-                            <div class="col-12 col-md-6 p-0">
-                                <div class="row item">
-                                    <div class="col-8 align-self-center text-left">
-                                        <h4>Mision</h4>
-                                        <p>Facilitar la distribución de activos farmacéuticos de alta calidad en Latinoamérica, impulsando la salud y el bienestar en nuestra región.</p>
-                                    </div>  
-                                </div>
-                            </div>                        
-                            <div class="col-12 col-md-6 p-0">
-                                <div class="row item">
-                                    <div class="col-8 align-self-center text-left">
-                                        <h4>Vision</h4>
-                                        <p>Ser líder en comercialización de ingredientes farmacéuticos activos con servicio profesional y calidad certificada globalmente.</p>
-                                    </div>  
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div data-aos="zoom-in" class="col-12 col-lg-4 align-self-end">
-                        <div class="quote">
-                            <div class="quote-content">
-                                <h4>Nuestro Compromiso</h4>
-                                <p>En Albanghu, nos comprometemos a mejorar vidas mediante productos farmacéuticos seguros y eficaces. Guiados por la ética y la integridad en cada paso, buscamos transformar positivamente la salud pública en América Latina y más allá, estableciendo estándares de excelencia y confianza en nuestra industria.</p>
-                                <h5>CEO | Dario Barreto</h5>
-                            </div>
-                            <i class="quote-right fas fa-quote-right"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-  <!-- Testimonials -->
-  <section id="testimonials" class="section-5 carousel testimonials">
+        <!-- Testimonials -->
+<section id="testimonials" class="section-5 carousel testimonials">
     <div class="overflow-holder">
         <div class="container">
             <div class="row text-center intro">
@@ -480,6 +433,12 @@
                                     <a href="tel:+5078388337" class="nav-link">
                                         <i class="fas fa-phone-alt mr-2"></i>
                                         +507 838 8337
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="https://www.linkedin.com/company/albanghu/" class="nav-link">
+                                        <i class="fab fa-linkedin-in mr-2"></i>
+                                        Linkedin
                                     </a>
                                 </li>
                                 <li class="nav-item">
