--- a/source/index-por.html
+++ b/source/index-por.html
@@ -148,8 +148,8 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#">IDIOMAS <i class="icon-arrow-right"></i></a>
                             <ul class="dropdown-menu">
+                                <li class="nav-item"><a href="index.html" class="nav-link"><img src="assets/images/spain.png"> España </a></li>
                                 <li class="nav-item"><a href="index-en.html" class="nav-link"><img src="assets/images/USA.png"> Inglés</a></li>
-                                <li class="nav-item"><a href="index-por.html" class="nav-link"><img src="assets/images/portuguese.png"> Portugues </a></li>
                             </ul>
                         </li>
                     </ul>
