--- a/source/index-en.html
+++ b/source/index-en.html
@@ -219,8 +219,7 @@
                         <div class="col-12 p-0">
                             <span class="pre-title m-auto m-md-0">About Albanghu</span>
                             <h2><span class="featured"><span>The</span></span> Company</h2>
-                            <p>Albanghu is a Latin company dedicated to the commercialization of raw materials for the pharmaceutical industry in the Latin American market.</p>
-                            <p>We facilitate trade between international manufacturers and laboratories in Latin America, ensuring the highest standards of quality and service.</p>
+                            <p>Albanghu, Inc is a company dedicated to the commercialization of raw materials for the pharmaceutical industry in the Latin American market.</p>
                         </div>
                     </div>
                 </div>
