--- a/source/index-por.html
+++ b/source/index-por.html
@@ -221,8 +221,7 @@
                             <div class="col-12 p-0">
                                 <span class="pre-title m-auto m-md-0">Sobre Albanghu</span>
                                 <h2><span class="featured"><span>A</span></span> Empresa</h2>
-                                <p>Albanghu é uma empresa latina dedicada à comercialização de matérias-primas para a indústria farmacêutica no mercado latino-americano.</p>
-                                <p>Facilitamos o comércio entre fabricantes internacionais e laboratórios na América Latina, garantindo os mais altos padrões de qualidade e serviço.</p>
+                                <p>Albanghu, Inc é uma empresa dedicada à comercialização de matérias-primas para a indústria farmacêutica no mercado latino-americano.</p>
                             </div>
                         </div>
                     </div>
