--- a/source/index.html
+++ b/source/index.html
@@ -219,8 +219,7 @@
                         <div class="col-12 p-0">
                             <span class="pre-title m-auto m-md-0">Sobre Albanghu</span>
                             <h2><span class="featured"><span>La</span></span> Empresa</h2>
-                            <p>Albanghu es una empresa Látina dedicada a la comercialización de materias primas para la industria farmacéutica en el mercado latinoamericano. </p>
-                            <p>Facilitamos el comercio entre fabricantes internacionales y laboratorios en América Latina, asegurando los más altos estándares de calidad y servicio.</p>
+                            <p>Albanghu, Inc es una empresa dedicada a la comercialización de materias primas para la industria farmacéutica en el mercado latinoamericano.</p>
                         </div>
                     </div>
                 </div>
@@ -350,6 +349,48 @@
 
         <br>
         <!-- Testimonials -->
+
+        <section id="about-2" class="section-2 odd highlights image-right counter funfacts featured">
+            <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 pr-md-5 align-self-top text">
+                    <div class="row items">
+                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 mb-2 item">
+                            <div data-percent="128" class="radial left">
+                                <span></span>
+                            </div>
+                            <h4>Certifications</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                        </div>
+                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 mb-2 item">
+                            <div data-percent="230" class="radial left">
+                                <span></span>
+                            </div>
+                            <h4>Employees</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                        </div>
+                    </div>
+                    <div class="row items"> 
+                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 mb-2 item">
+                            <div data-percent="517" class="radial left">
+                                <span></span>
+                            </div>
+                            <h4>Customers</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                        </div>
+                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 mb-2 item">
+                            <div data-percent="94" class="radial left">
+                                <span></span>
+                            </div>
+                            <h4>Countries Served</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
+
 <section id="testimonials" class="section-5 carousel testimonials">
     <div class="overflow-holder">
         <div class="container">
