--- a/source/index.html
+++ b/source/index.html
@@ -352,44 +352,36 @@
 
         <section id="about-2" class="section-1 odd highlights image-right counter funfacts featured">
             <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-6 pr-md-5 align-self-top text">
-                    <div class="row items">
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 mb-2 item">
-                            <div data-percent="128" class="radial left">
-                                <span></span>
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-8 text-center">
+                        <div class="row items justify-content-center">
+                            <div data-aos="fade-up" class="col-12 col-md-4 p-3 mb-4 item">
+                                <div data-percent="128" class="radial">
+                                    <span></span>
+                                </div>
+                                <h4>Certifications</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
                             </div>
-                            <h4>Certifications</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                        </div>
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 mb-2 item">
-                            <div data-percent="230" class="radial left">
-                                <span></span>
+                            <div data-aos="fade-up" class="col-12 col-md-4 p-3 mb-4 item">
+                                <div data-percent="230" class="radial">
+                                    <span></span>
+                                </div>
+                                <h4>Employees</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
                             </div>
-                            <h4>Employees</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                        </div>
-                    </div>
-                    <div class="row items"> 
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 mb-2 item">
-                            <div data-percent="517" class="radial left">
-                                <span></span>
+                            <div data-aos="fade-up" class="col-12 col-md-4 p-3 mb-4 item">
+                                <div data-percent="517" class="radial">
+                                    <span></span>
+                                </div>
+                                <h4>Customers</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
                             </div>
-                            <h4>Customers</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                        </div>
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 mb-2 item">
-                            <div data-percent="94" class="radial left">
-                                <span></span>
-                            </div>
-                            <h4>Countries Served</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
                         </div>
                     </div>
                 </div>
             </div>
-            </div>
         </section>
+        
 
 <section id="testimonials" class="section-5 carousel testimonials">
     <div class="overflow-holder">
