--- a/source/index.html
+++ b/source/index.html
@@ -211,46 +211,45 @@
         </section>
 
         <!-- About -->
-        <section id="about" class="section-1 odd highlights image-right">
+        <section id="about-3" class="section-3 highlights image-right featured">
             <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-6 pr-md-5 align-self-center text-center text-md-left text">
-                    <div data-aos="fade-up"  class="row intro">
-                        <div class="col-12 p-0">
-                            <span class="pre-title m-auto m-md-0">Sobre Albanghu</span>
-                            <h2><span class="featured"><span>La</span></span> Empresa</h2>
-                            <p>Albanghu, Inc es una empresa dedicada a la comercialización de materias primas para la industria farmacéutica en el mercado latinoamericano.</p>
+                <div class="row">
+                    <div class="col-12 col-md-6 pr-md-5 align-self-center text-center text-md-left text">
+                        <div data-aos="fade-up" class="row intro">
+                            <div class="col-12 p-0">
+                                <span class="pre-title m-auto m-md-0">Sobre Albanghu</span>
+                                <h2><span class="featured"><span>La</span></span> Empresa</h2>
+                                <p>Albanghu, Inc es una empresa dedicada a la comercialización de materias primas para la industria farmacéutica en el mercado latinoamericano.</p>
+                            </div>
+                        </div>
+                        <div class="row items">                             
+                            <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 item">
+                                <h4><i class="fa fa-users"></i> Experiencia</h4>
+                                <p>Contamos con más de 15 años en la Industria Farmacéutica.</p>
+                            </div>           
+                            <div data-aos="fade-up" class="col-12 col-md-6 p-0 item">
+                                <h4><i class="fa fa-check"></i> Partners</h4>
+                                <p>Trabajamos con una amplia cartera de fabricantes certificadas a nivel mundial.</p>
+                            </div> 
+                        </div>
+                        <div class="row items"> 
+                            <div data-aos="fade-up" class="col-12 col-md-6 p-0 item">
+                                <h4><i class="fas fa-award"></i> Certificación</h4>
+                                <p>Productos documentados según las Buenas Prácticas de Manufactura.</p>
+                            </div>  
+                            <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 item">
+                                <h4><i class="fa fa-dollar-sign"></i> Financiamiento</h4>
+                                <p>Soluciones crediticias y personalizadas en apoyo constante a nuestros clientes.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-6 pr-md-5 align-self-center text-center text-md-left text">
-                    <div class="row items">                             
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 item">
-                            <h4><i class="fa fa-users"> </i>
-                            </i>Experiencia</h4>
-                            <p>Contamos con más de 15 años en la Industria Farmacéutica.</p>
-                        </div>           
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 item">
-                            <h4><i class=" fa fa-check"></i> Partners</h4>
-                            <p>Trabajamos con una amplia cartera de fabricantes certificadas a nivel mundial.</p>
-                        </div> 
-                    </div>
-                    <div class="row items"> 
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 item">
-                            <h4><i class=" fas fa-award">
-                            </i> Certificación</h4>
-                            <p>Productos documentados según las Buenas Prácticas de Manufactura.</p>
-                        </div>  
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 item">
-                            <h4><i class=" fa fa-dollar-sign">
-                            </i> Financiamiento</h4>
-                            <p>Soluciones crediticias y personalizadas en apoyo constante a nuestros clientes.</p>
-                        </div>
+                    <div class="col-12 col-md-6 p-0 image">
+                        <img src="assets/images/about-3.jpg" class="fit-image" alt="Fit Image">
                     </div>
                 </div>
-            </div>
             </div>
         </section>
+        
 
         <!-- Services -->
         <section id="services" class="section-2 offers">
