--- a/source/index-en.html
+++ b/source/index-en.html
@@ -211,46 +211,45 @@
         </section>
 
         <!-- About -->
-        <section id="about" class="section-1 odd highlights image-right">
+        <section id="about-3" class="section-3 highlights image-right featured">
             <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-6 pr-md-5 align-self-center text-center text-md-left text">
-                    <div data-aos="fade-up"  class="row intro">
-                        <div class="col-12 p-0">
-                            <span class="pre-title m-auto m-md-0">About Albanghu</span>
-                            <h2><span class="featured"><span>The</span></span> Company</h2>
-                            <p>Albanghu, Inc is a company dedicated to the commercialization of raw materials for the pharmaceutical industry in the Latin American market.</p>
+                <div class="row">
+                    <div class="col-12 col-md-6 pr-md-5 align-self-center text-center text-md-left text">
+                        <div data-aos="fade-up" class="row intro">
+                            <div class="col-12 p-0">
+                                <span class="pre-title m-auto m-md-0">About Albanghu</span>
+                                <h2><span class="featured"><span>The</span></span> Company</h2>
+                                <p>Albanghu, Inc is a company dedicated to the commercialization of raw materials for the pharmaceutical industry in the Latin American market.</p>
+                            </div>
+                        </div>
+                        <div class="row items">                             
+                            <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 item">
+                                <h4><i class="fa fa-users"></i> Experience</h4>
+                                <p>We have over 15 years in the Pharmaceutical Industry.</p>
+                            </div>           
+                            <div data-aos="fade-up" class="col-12 col-md-6 p-0 item">
+                                <h4><i class="fa fa-check"></i> Partners</h4>
+                                <p>We work with a wide portfolio of globally certified manufacturers.</p>
+                            </div> 
+                        </div>
+                        <div class="row items"> 
+                            <div data-aos="fade-up" class="col-12 col-md-6 p-0 item">
+                                <h4><i class="fas fa-award"></i> Certification</h4>
+                                <p>Products documented according to Good Manufacturing Practices.</p>
+                            </div>  
+                            <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 item">
+                                <h4><i class="fa fa-dollar-sign"></i> Financing</h4>
+                                <p>Credit solutions and personalized support constantly provided to our clients.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-6 pr-md-5 align-self-center text-center text-md-left text">
-                    <div class="row items">                             
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 item">
-                            <h4><i class="fa fa-users"> </i>
-                            </i> Experience</h4>
-                            <p>We have over 15 years of experience in the Pharmaceutical Industry.</p>
-                        </div>           
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 item">
-                            <h4><i class=" fa fa-check"></i> Partners</h4>
-                            <p>We work with a wide portfolio of certified manufacturers worldwide.</p>
-                        </div> 
-                    </div>
-                    <div class="row items"> 
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 item">
-                            <h4><i class=" fas fa-award">
-                            </i> Certification</h4>
-                            <p>Products documented according to Good Manufacturing Practices.</p>
-                        </div>  
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 item">
-                            <h4><i class=" fa fa-dollar-sign">
-                            </i> Financing</h4>
-                            <p>Credit and personalized solutions with constant support for our clients.</p>
-                        </div>
+                    <div class="col-12 col-md-6 p-0 image">
+                        <img src="assets/images/about-3.jpg" class="fit-image" alt="Fit Image">
                     </div>
                 </div>
-            </div>
             </div>
         </section>
+        
 
         <!-- Services -->
         <section id="services" class="section-2 offers">
