--- a/source/index-en.html
+++ b/source/index-en.html
@@ -15,9 +15,10 @@
 
         <title>Albanghu, Inc</title>
 
-        <meta name="description" content="Business, Consulting, Finance, Insurance, Startup and Technology">
-        <meta name="subject" content="Business, Consulting, Finance, Insurance, Startup and Technology">
-        <meta name="author" content="Codings">
+        <meta name="description" content="Albanghu, Inc es una empresa líder en la comercialización de materias primas para la industria farmacéutica, ofreciendo más de 15 años de experiencia, socios certificados a nivel mundial y soluciones de financiamiento personalizadas.">
+        <meta name="subject" content="Industria Farmacéutica, Materias Primas, Negocios, Consultoría, Finanzas, Buenas Prácticas de Manufactura">
+        <meta name="author" content="Albanghu, Inc">
+
 
         <!-- ==============================================
         Favicons
